
/**
 * Enumeration class Aktionstyp - write a description of the enum class here
 *
 * @author (your name here)
 * @version (version number or date here)
 */
public enum Aktionstyp
{
    MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY
}
