
/**
 * Enumeration class Farbe - write a description of the enum class here
 *
 * @author (your name here)
 * @version (version number or date here)
 */
public enum Farbe
{
    GELB, BLAU, BRAUN, GRUEN, ROT, SCHWARZ
}
