
/**
 * Enumeration class Warentyp - write a description of the enum class here
 *
 * @author (your name here)
 * @version (version number or date here)
 */
public enum Warentyp
{
    MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY
}
