@startuml
' Einstellungen:
' skinparam dpi 300
' skinparam handwritten true
' skinparam monochrome true
' skinparam linetype polyline
' skinparam linetype ortho
' hide <<myStyle>> stereotype
' skinparam ClassBorderColor<<myStyle>> Black

' Klassen
class Spiel
class Spieler
class Spekulant
class Spielerfigur
abstract class Spielfigur
abstract class Liste
class Kartenstapel<Spielkarte>
class Warteschlange<Spielfigur>
abstract class Karte
abstract class Spielkarte
class Einkaufszettel
class Warenkarte
class Lieferkarte
class Aktionskarte
abstract class Laden
class Warenladen
class Schwarzmarkt

enum Warentyp
enum Farbe

enum Warentyp {
    Kiosk
    Lebensmittel
    Möbel
    Gerät
    Kleidung
}
enum Farbe {
    Gelb
    Blau
    Braun
    Grün
    Rot
    Schwarz
}
enum Aktionstyp {
    Anwesenheitsliste
    Bueckware
    FreundImKomitee
    GluecklicherZufall
    GroessereLieferung
    Inventur
    KritikAnDerRegierung
    Lieferfehler
    MutterMitBaby
    Vordraengler
}

' Klassen-Beziehungen
Spiel o.. Spieler
Spieler o.. Spielerfigur

Spekulant --|> Spielfigur
Spielerfigur --|> Spielfigur

Kartenstapel o.. Liste
Warteschlange o.. Liste

Einkaufszettel --|> Karte
Spielkarte --|> Karte
Warenkarte --|> Spielkarte
Lieferkarte --|> Spielkarte
Aktionskarte --|> Spielkarte

Schwarzmarkt --|> Laden
Warenladen --|> Laden
Warenladen o.. Spekulant

Warenkarte o.. Warentyp
Lieferkarte o.. Warentyp
Aktionskarte o-- Aktionstyp

Spieler o.. Einkaufszettel
Spieler o.. Aktionskarte
Spieler o.. Warenkarte

Spiel o.. Lieferkarte
Spiel o.. Warenladen
Spiel o.. Schwarzmarkt

Warenladen o.. Warentyp

Laden o.. Warteschlange

Spielfigur o.. Farbe

Spiel o.. Kartenstapel
Spieler o.. Kartenstapel
Warenladen o.. Kartenstapel
Schwarzmarkt o.. Kartenstapel

' Spielerfigur --> Spieler
' Spekulant --> Schwarzmarkt
@enduml